--- a/sass/_initialize.scss
+++ b/sass/_initialize.scss
@@ -1,15 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:100,400,500&display=swap');
 html{
-    font-size: 10px;
+    // font-size: 10px;
 }
 body{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-size: 1.6rem;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 img{
     width: 100%;
+    height: auto;
 }
 li{
     list-style: none;
