--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,7 @@
 @import 'initialize';
 @import 'inherent';
 @import 'mixin';
-
+@import 'responsive';
 
 .header{
     text-transform: uppercase;
@@ -25,7 +25,7 @@
         //Responsive nav
         @media (min-width: 768px){
             &{
-                grid-template-columns: 1fr 2fr 1fr;
+                grid-template-columns: 0.5fr 2fr 1fr;
                 
             }
         }
@@ -54,18 +54,18 @@
     }
 
     .user{
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
+        @include flex(row,space-between, center);
 
         &__carrito{
             display: flex;
             align-items: center;
             
             &-number{
+                @extend .flexCenter;
+                justify-content: center;
                 text-align: center;
-                width: 2rem;
-                height: 2rem;
+                width: 3rem;
+                height: 3rem;
                 border-radius: 50%;
                 margin-left: 0.5rem;
                 background-color: $colorImportant;
@@ -78,7 +78,7 @@
 
 .main{
     .banner{
-        padding: 4rem 12rem;
+        padding: 4% 8%;
         background-color: $colorPrimary;
     }
 
@@ -92,21 +92,15 @@
         gap: 0.5rem;
         grid-template-areas: "m1 p1" "m2 p2" "p3 m3" "p4 m4";
         
-        .m1 { grid-area: m1; }
+        $i: 0;
+        @while $i <=8{
+            .m#{$i} { grid-area: m#{$i}; }
+            
+            .p#{$i} { grid-area: p#{$i}; }
+            
+            $i: $i + 1;
+        }
         
-        .p1 { grid-area: p1; }
-        
-        .m3 { grid-area: m3; }
-        
-        .p3 { grid-area: p3; }
-        
-        .p2 { grid-area: p2; }
-        
-        .m2 { grid-area: m2; }
-        
-        .p4 { grid-area: p4; }
-        
-        .m4 { grid-area: m4; }
 
 
         .sushi__img{
